--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,46 @@
     transform: rotate(360deg);
   }
 }
+/* App.css */
+.container {
+  width: 700px;
+  height: 300px;
+  margin: 0 auto;
+  padding: 20px;
+  text-align: center;
+  background-color: aqua;
+  margin-top: 50px;
+  border-radius: 10px;
+}
+.name{
+  color: red;
+  font-weight: bold;
+}
+.words {
+  height: 40px;
+  width: 250px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 14rem;
+  margin-top: 30px;
+}
+
+.color-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.color-card {
+  width: 100px;
+  height: 100px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-weight: bold;
+}
